# Digital_Bargeld-merchant

./: .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  Makefile.am  README  RENAMING_NOTES.txt  TODO  bootstrap  configure.ac  licensing.rst  merchant.conf
doc/: Makefile.am  arch-api.dot  arch.dot  arch.txt  config.sh  configuration-format.texi  manual.texi  merchant-api-curl.texi  merchant-api-php.texi  merchant-api-python.texi  merchant-api.content.texi  post_to_backend.php  taler-config.texi  taler-merchant-benchmark.1  taler-merchant-generate-payments.1  taler-merchant-httpd.1  taler-merchant-tip-enable.1  version.texi
doc/examples/: donate_handler.php  fulfillment_handler.php  generate_contract.php  pay_handler.php
examples/blog/articles/: .gitignore  Makefile.am  article_images.php  scrap1_1.html  scrap1_10.html  scrap1_11.html  scrap1_12.html  scrap1_13.html  scrap1_14.html  scrap1_15.html  scrap1_16.html  scrap1_17.html  scrap1_18.html  scrap1_19.html  scrap1_2.html  scrap1_20.html  scrap1_21.html  scrap1_22.html  scrap1_23.html  scrap1_24.html  scrap1_25.html  scrap1_26.html  scrap1_27.html  scrap1_28.html  scrap1_29.html  scrap1_3.html  scrap1_30.html  scrap1_31.html  scrap1_32.html  scrap1_33.html  scrap1_34.html  scrap1_35.html  scrap1_36.html  scrap1_37.html  scrap1_38.html  scrap1_39.html  scrap1_4.html  scrap1_40.html  scrap1_41.html  scrap1_42.html  (+10 more)
src/backend/: Makefile.am  QUESTIONS  README  legacy.c  merchant.c  merchant.conf  merchant_db.c  myconf.sh  taler-merchant-dbinit  taler-merchant-dbinit.c  taler-merchant-httpd.c  taler-merchant-httpd.h  taler-merchant-httpd_auditors.c  taler-merchant-httpd_auditors.h  taler-merchant-httpd_check-payment.c  taler-merchant-httpd_check-payment.h  taler-merchant-httpd_config.c  taler-merchant-httpd_config.h  taler-merchant-httpd_contract.c  taler-merchant-httpd_contract.h  taler-merchant-httpd_exchanges.c  taler-merchant-httpd_exchanges.h  taler-merchant-httpd_get-orders.c  taler-merchant-httpd_history.c  taler-merchant-httpd_history.h  taler-merchant-httpd_map.c  taler-merchant-httpd_map.h  taler-merchant-httpd_mhd.c  taler-merchant-httpd_mhd.h  taler-merchant-httpd_mints.c  taler-merchant-httpd_mints.h  taler-merchant-httpd_obsolete.c  taler-merchant-httpd_order.c  taler-merchant-httpd_order.h  taler-merchant-httpd_orders_order_get4.c  taler-merchant-httpd_orders_order_pay.h  taler-merchant-httpd_orders_post.h  taler-merchant-httpd_parsing.c  taler-merchant-httpd_parsing.h  taler-merchant-httpd_pay.c  (+100 more)
src/backend-lib/: Makefile.am  merchant_api_contract.c  merchant_api_deposit.c  merchant_db.c  merchant_db.h  taler-merchant-httpd_contract.c  taler-merchant-httpd_deposit.c  taler_merchant_contract_lib.h  taler_merchant_deposit_lib.h  taler_merchant_lib.h
src/backend/melted/: Makefile.am  README  copy.sh  merchant.c  merchant.conf  merchant_db.c  (+2 more)
src/backenddb/: 0001.sql  Makefile.am  drop0000.sql  drop0001.sql  merchant-0000.sql  merchant-0001.sql  merchant_db.c  merchantdb-postgres.conf  merchantdb_plugin.c  plugin_merchantdb_postgres.c  test-merchantdb-postgres.conf  test_backenddb.c  test_merchantdb.c
src/lib/: Makefile.am  merchant_api_check_payment.c  merchant_api_common.c  merchant_api_common.h  merchant_api_config.c  merchant_api_config_get.c  merchant_api_context.c  merchant_api_context.h  merchant_api_contract.c  merchant_api_delete_instance.c  merchant_api_delete_instances_ID.c  merchant_api_delete_product.c  merchant_api_get_config.c  merchant_api_get_instance.c  merchant_api_get_instances.c  merchant_api_get_orders.c  merchant_api_get_product.c  merchant_api_get_products.c  merchant_api_history.c  merchant_api_instances_get.c  merchant_api_json.c  merchant_api_json.h  merchant_api_lock_product.c  merchant_api_map.c  merchant_api_patch_instance.c  merchant_api_patch_product.c  merchant_api_pay.c  merchant_api_pay_abort.c  merchant_api_poll_payment.c  merchant_api_post_instances.c  merchant_api_post_order_claim.c  merchant_api_post_orders.c  merchant_api_post_products.c  merchant_api_proposal.c  merchant_api_proposal_lookup.c  merchant_api_refund.c  merchant_api_refund_increase.c  merchant_api_tip_authorize.c  merchant_api_tip_enable.c  merchant_api_tip_pickup.c  (+40 more)
src/merchant/: .gitignore  Makefile  Makefile.am  Makefile.in  merchant_db.c  merchant_db.h  taler_merchant_dbinit.c  taler_merchant_serve.c  test_merchant.c  test_merchant.conf  test_merchant.ecc  test_merchant_db.c
src/merchant-tools/: Makefile.am  README  taler-merchant-benchmark.c  taler-merchant-dbinit  taler-merchant-dbinit.c  taler-merchant-generate-payments-alt.c  taler-merchant-generate-payments.c  taler-merchant-generate-payments_new.c  taler-merchant-tip-enable.c
src/samples/: Makefile.am  README  generate_payments.c  merchant_generate_payments.conf
src/testing/: Makefile.am  reserve_dtip.priv  test_merchant_api.c  test_merchant_api_twisted.c  test_merchant_api_twisted.conf  testing_api_cmd_check_payment.c  testing_api_cmd_claim_order.c  testing_api_cmd_config.c  testing_api_cmd_delete_instance.c  testing_api_cmd_delete_product.c  testing_api_cmd_get_instance.c  testing_api_cmd_get_instances.c  testing_api_cmd_get_product.c  testing_api_cmd_get_products.c  testing_api_cmd_lock_product.c  testing_api_cmd_patch_instance.c  testing_api_cmd_patch_product.c  testing_api_cmd_pay_abort_refund.c  testing_api_cmd_poll_payment.c  testing_api_cmd_post_instances.c  testing_api_cmd_post_orders.c  testing_api_cmd_post_products.c  testing_api_cmd_proposal_lookup.c  testing_api_cmd_refund_lookup.c  testing_api_cmd_rewind.c  testing_api_cmd_tip_authorize.c  testing_api_cmd_tip_pickup.c  testing_api_cmd_tip_query.c  testing_api_trait_hash.c  testing_api_trait_merchant_sig.c  testing_api_trait_planchet.c  testing_api_trait_string.c
src/tests/: Makefile.am  deposit_permission.sample  deposit_permission_backend.sample  deposit_permission_edate_backend.sample  merchant-contract-test  merchant-contract-test.c  merchant.conf  merchant.priv  merchant_db.h  test.debug  test.valgrind  test_contract.c  test_contract_README  test_pay_README
(+213 files in other folders)
